<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMailFragment"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="40dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:id="@+id/tv_contact_name_f3"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_contact_name_f3"
        android:autofillHints=""
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layout_marginTop="40dp"
        android:padding="12dp"
        android:background="@drawable/edt_background_white"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"

        android:id="@+id/tv_phone_number_f3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_phone_number_f3"
        android:autofillHints=""

        android:hint="@string/enter_address"
        android:inputType="phone"
        android:layout_marginTop="140dp"
        android:padding="12dp"
        android:background="@drawable/edt_background_white"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_phone_submit_f3"
        android:text="@string/submit"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_background"
        />

</FrameLayout>